Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7647

Massive OpenGL texture memory leak in QToolButtons with Menu arrow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 4.6.2
    • 4.6.1
    • GUI: OpenGL
    • None
    • 9e95ce2a68ef167e17dccc5789cbf3bf74712280

      When using OpenGL as the viewport in a QGraphicsScene that contains a toolbutton with a menu arrow, then it will cause massive OpenGL texture memory leak.

      The following example reproduces the problem:

      #include <QtGui>
      #include <QtOpenGL>
      
      int main(int argc, char **argv)
      {
      	QApplication app(argc, argv);
      	app.setStyle(new QWindowsStyle());
      	QGLWidget* gl_wid = new QGLWidget;
      	QGraphicsScene *scene = new QGraphicsScene(gl_wid);
      	
      	QToolButton *button = new QToolButton();
      	QMenu* menu = new QMenu(button);
      	menu->addAction("icon_leak");
      	button->setMenu(menu);
             button->setPopupMode(QToolButton::InstantPopup);
      
      	QGraphicsProxyWidget *proxy = scene->addWidget(button);
      	QGraphicsView view(scene);
      	view.setViewport(gl_wid);
      	view.show();
              return app.exec();    
      }

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tcooksey Tom Cooksey
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes