Fix GL texture leaks when pixmaps are deleted

This fixes quite a lot of issues:

* QtOpenGL only registered qpixmap destruction hooks on X11 and
  those only cleanup the EGL/GLX surface, not the texture object.
* The QPixmap destruction hooks were only being called from the
  QPixmap destructor. However, this means when a QPixmap is assigned
  to another QPixmap, the hooks don't get called.

Task-number: QTBUG-7647
Reviewed-By: Samuel
Reviewed-By: Trond
(cherry picked from commit 9e95ce2a68ef167e17dccc5789cbf3bf74712280)